--- a/.github/workflows/s3.yml
+++ b/.github/workflows/s3.yml
@@ -10,7 +10,7 @@ jobs:
     call-workflow-passing-data:
         uses: bryanus1/pipelines-reusable/.github/workflows/front_s3.yaml@main
         with:
-          bucket_name: s3-bucket-braves
+          bucket_name: "s3-bucket-braves"
         secrets:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
